# rk2

./: CMakeLists.txt  CPackConfig.cmake  Prototype.cpp  README.md  main.cpp
.github/workflows/: build.yml  publication.yml  testing.yml
tests/: test_main.cpp
